[gd_scene load_steps=12 format=2]

[ext_resource path="res://sprites/craftpix/craftpix-net-724983-ocean-and-clouds-free-pixel-art-backgrounds/Ocean_3/2.png" type="Texture" id=1]
[ext_resource path="res://sprites/craftpix/craftpix-net-724983-ocean-and-clouds-free-pixel-art-backgrounds/Ocean_3/4.png" type="Texture" id=2]
[ext_resource path="res://sprites/craftpix/craftpix-net-724983-ocean-and-clouds-free-pixel-art-backgrounds/Ocean_3/1.png" type="Texture" id=3]
[ext_resource path="res://sprites/craftpix/craftpix-net-724983-ocean-and-clouds-free-pixel-art-backgrounds/Ocean_3/3.png" type="Texture" id=4]
[ext_resource path="res://scenes/gameplay/Title.gd" type="Script" id=5]
[ext_resource path="res://title.png" type="Texture" id=6]
[ext_resource path="res://fonts/ShantellSans-ExtraBoldItalic.ttf" type="DynamicFontData" id=7]
[ext_resource path="res://bgm/The Last Turtle.ogg" type="AudioStream" id=8]

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="DynamicFont" id=1]
size = 20
outline_color = Color( 0.482353, 0.623529, 0.239216, 1 )
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=2]
size = 10
font_data = ExtResource( 7 )

[node name="Title" type="Node2D"]
script = ExtResource( 5 )

[node name="Node2D" type="Node2D" parent="."]

[node name="ColorRect" type="ColorRect" parent="Node2D"]
margin_top = -29.0
margin_right = 728.0
margin_bottom = 80.0
color = Color( 0.392157, 0.643137, 0.92549, 1 )

[node name="1" type="Sprite" parent="Node2D"]
position = Vector2( 0, 72 )
scale = Vector2( 1.25, 1.25 )
texture = ExtResource( 3 )
centered = false

[node name="2" type="Sprite" parent="Node2D"]
position = Vector2( -16, 72 )
scale = Vector2( 1.25, 1.25 )
texture = ExtResource( 1 )
centered = false

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]
layer = 100
offset = Vector2( 0, 72 )
scale = Vector2( 1.25, 1.25 )
transform = Transform2D( 1.25, 0, 0, 1.25, 0, 72 )

[node name="ParallaxLayer3" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 0.25, 0.25 )
motion_mirroring = Vector2( 576, 0 )

[node name="3" type="Sprite" parent="ParallaxBackground/ParallaxLayer3"]
texture = ExtResource( 4 )
centered = false

[node name="ParallaxLayer4" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 1.5, 1.5 )
motion_mirroring = Vector2( 576, 0 )

[node name="4" type="Sprite" parent="ParallaxBackground/ParallaxLayer4"]
texture = ExtResource( 2 )
centered = false

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 128

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="CenterContainer" type="CenterContainer" parent="CanvasLayer/MarginContainer"]
margin_right = 640.0
margin_bottom = 480.0

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/MarginContainer/CenterContainer"]
margin_left = 220.0
margin_top = 136.0
margin_right = 420.0
margin_bottom = 343.0

[node name="HSeparator" type="HSeparator" parent="CanvasLayer/MarginContainer/CenterContainer/VBoxContainer"]
margin_right = 200.0
margin_bottom = 60.0
custom_constants/separation = 60
custom_styles/separator = SubResource( 3 )

[node name="Button1" type="Button" parent="CanvasLayer/MarginContainer/CenterContainer/VBoxContainer"]
unique_name_in_owner = true
margin_top = 64.0
margin_right = 200.0
margin_bottom = 109.0
rect_min_size = Vector2( 200, 45 )
custom_colors/font_color = Color( 0.482353, 0.623529, 0.239216, 1 )
custom_fonts/font = SubResource( 1 )
text = "Prologue"

[node name="Button12" type="Button" parent="CanvasLayer/MarginContainer/CenterContainer/VBoxContainer"]
unique_name_in_owner = true
visible = false
margin_top = 113.0
margin_right = 200.0
margin_bottom = 158.0
rect_min_size = Vector2( 200, 45 )
custom_colors/font_color = Color( 0.788235, 0.792157, 0.227451, 1 )
custom_fonts/font = SubResource( 1 )
disabled = true
text = "Requiem"

[node name="Button2" type="Button" parent="CanvasLayer/MarginContainer/CenterContainer/VBoxContainer"]
unique_name_in_owner = true
margin_top = 113.0
margin_right = 200.0
margin_bottom = 158.0
rect_min_size = Vector2( 200, 45 )
custom_colors/font_color = Color( 0.623529, 0.239216, 0.239216, 1 )
custom_fonts/font = SubResource( 1 )
text = "Retribution"

[node name="Button3" type="Button" parent="CanvasLayer/MarginContainer/CenterContainer/VBoxContainer"]
unique_name_in_owner = true
margin_top = 162.0
margin_right = 200.0
margin_bottom = 207.0
rect_min_size = Vector2( 200, 45 )
custom_colors/font_color = Color( 0.27451, 0.647059, 0.933333, 1 )
custom_fonts/font = SubResource( 1 )
text = "Leaderboard"

[node name="Label4" type="Label" parent="CanvasLayer"]
margin_left = 224.0
margin_top = 408.0
margin_right = 616.0
margin_bottom = 456.0
custom_colors/font_color = Color( 0.247059, 0.239216, 0.278431, 1 )
custom_fonts/font = SubResource( 2 )
text = "A game by Josep Valls and Damian Smith"
align = 2
valign = 2
autowrap = true

[node name="WhiteColorRect" type="ColorRect" parent="CanvasLayer"]
visible = false
margin_left = -500.0
margin_top = -500.0
margin_right = 1000.0
margin_bottom = 1000.0

[node name="Title" type="Sprite" parent="."]
position = Vector2( 0, 16 )
texture = ExtResource( 6 )
centered = false

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
autoplay = true
bus = "Music"
